HISTORY
=======

History of changes to PHC (name of developer listed in brackets)::

    PloneHelpCenter 1.6.1
    
    - Can't cache function results that have brains.
      [stevem]


    PloneHelpCenter 1.6
    
    - Added time-based ram caching to several expensive view methods.
      Default invalidation is 30 minutes, but may be changed in
      config.py.
      [stevem]
    
    - Plone 3.x is now required. PHC 1.5.x will be a maintenance branch. 
    
    - Add browser view support for a listing of start here docs by section.
      This is for Plone.Org, forthcoming documentation top page revision.
      [stevem]
    
    - The compact topic view no longer blocks the left column. That just isn't
      necessary for Plone 3.x.
      [stevem]


    PloneHelpCenter 1.5

    - Corrected a problem in the helpcenter_view that would cause a batching 
      error for non-PHC subcontent. [stevem]
    
    RC 2
    
    - Fix issue #95 -- Order of items is not respected -- by adding back
      some of the interfaces masked when marker interfaces were added
      during view implementation.
      [stevem]
    
    - Hacked up a solution to how-to attachment action buttons that works
      with 2.5 and 3.x. The is just a patch to hold until 2.5 compatibility
      is abandoned. Fixes issue 106.
      [stevem]
    
    - Unable to add attachments to how-tos. Fixed narrow issue; larger
      problem of actions remains.
      [stevem]
    
    - Expanded referenceable types to include all PHC leaf content types.
      Fixes 114.
      [stevem]
      
    RC 1
    
    - Eggified. [stevem]
    
    Beta 7
    
    - Add link to api.plone.org in list of additional resources. This
      fixes http://dev.plone.org/plone/ticket/7898.
      [vinsci]
    
    Beta 6
    
    - Restored getAudiencesVocab method to PHCFolder. It had been accidentally
      deleted in a recen refactoring. Fixes #93.
      [kteague]
      